# fucos

./: CMakeLists.txt  linker.ld
boot/: .source.txt  mbr.asm  stage2.asm
kernel/: allocator.c  allocator.h  font.c  font.h  gfx.asm  gfx.c  gfx.h  idt.c  idt.h  io.h  isr.S  kmain.c  mtrr.c  mtrr.h  serial.c  serial.h  start.S  sysinfo.h  textmode.c  textmode.h  vbemodeinfo.h  view.h
